css/team.css
.css-ojj0fs {
  background: linear-gradient(-32deg, #6f31b7 14%, #fb558e 82%);
  margin-top: 16px;
  margin-bottom: 16px;
  margin-left: 32px;
  margin-right: 32px;
  border-radius: 10px;
  padding-bottom: 16px;
  transition: 0.5s ease-out;
}


.css-ojj0fs:hover{
  transform: scale(1.1) translateZ(0px);
  transition: 0.5s ease-in;
}
@media screen and (min-width: 32em) {
  .css-a7eowp {
    margin-top: 64px;
  }
  @media screen and (min-width: 48em) {
    .css-a7eowp {
      grid-template-columns: repeat(2, 1fr);
    }
    @media screen and (min-width: 32em) {
      .css-a7eowp {
        box-sizing: border-box;
        margin: 0;
        min-width: 0;
        display: grid;
        grid-gap: 15px;
        padding-bottom: 32px;
      }
    }
  }
}

.css-v1cp1g {
  width: 120px;
  border-radius: 200px;
  margin-top: 32px;
  border: 2px solid white;
}
.css-fzwid6 {
  width: 100%;
  text-align: center;
}
.css-qgkf1l {
  color: #ffffff;
  margin-bottom: 0;
}
.css-14atmpy {
  color: #ffffff;
  margin-top: 0;
  margin-left: 8px;
  margin-right: 8px;
  font-size: 1.2rem;
}

@media screen and (min-width: 48em) {
  .css-xc5w91 {
    max-width: 1200px;
  }
  .css-xc5w91 {
    box-sizing: border-box;
    margin: 32px auto 0px;
    min-width: 0px;
    max-width: 1024px;
    width: 100%;
    padding-left: 16px;
    padding-right: 16px;
    text-align: center;
  }
}

@media screen and (min-width: 48em) {
  .css-b63oki {
    grid-template-columns: repeat(4, 1fr);
  }

  .css-b63oki {
    box-sizing: border-box;
    margin: 0px;
    min-width: 0px;
    display: grid;
    /* grid-template-columns: repeat(1, 1fr); */
    gap: 0px;
    text-align: center;
  }
}

.css-amg1nq {
  width: 72px;
  height: 72px;
  border-radius: 99999px;
}

.css-18bli05 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 20px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.css-19vzo5b {
  width: 1.5em;
  height: 1.5em;
  display: inline-block;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #ffffff;
  padding: 5px;
  transition: 0.2s ease-in-out;
}

.css-19vzo5b:hover {

  transform: scale(1.2) translateZ(0px);
}

.css-8soujw {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(1, 1fr);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 20px;
  padding-left: 50px;
  padding-right: 50px;
}

@media screen and (min-width: 30em) {
  .css-8soujw {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 48em) {
  .css-8soujw {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 62em) {
  .css-8soujw {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media screen and (min-width: 80em) {
  .css-8soujw {
    grid-template-columns: repeat(5, 1fr);
  }
}

.css-qt1wnn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px;
  border: 2px solid #252222;
  min-width: 240px;
}

.css-l4jt5k {
  padding-left: 20px;
  padding-right: 20px;
}

.crt2{
  background: linear-gradient( to bottom, #ffca08 0%, #f70067 100%);
        margin-top: 16px;
        margin-bottom: 16px;
        margin-left: 32px;
        margin-right: 32px;
        border-radius: 10px;
        padding-bottom: 16px;
        transition: 0.5s ease-out;
        max-width: fit-content;
}

  
  transform: scale(1.2) translateZ(0px);
}

